# cloud-run-cicd

./: .env.sample  .gitignore  README.md  cloudbuild.yaml  compose.yml  pyproject.toml
infra/terraform/: apis.tf  artifact_registry.tf  cloud_run.tf  iam.tf  main.tf  outputs.tf  terraform.tfvars.sample  variables.tf
infra/terraform/modules/cloud-run/: main.tf  variables.tf
infra/terraform/modules/docker/: main.tf  outputs.tf  variables.tf
scripts/pg/: init.sql
src/: Dockerfile
src/app/: main.py  server.py
src/app/core/: config.py  logging.py
src/app/db/: connector.py
