[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-run-cicd"
version = "0.1.0"
description = "A Python project for demonstrating cloud run CI/CD"
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
  "fastapi[standard]",
  "pydantic-settings",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
]